@@ -79,6 +79,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
                 <configuration>
+                    <argLine>--add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine> 
                     <systemPropertyVariables>
                       <java.awt.headless>true</java.awt.headless>
                     </systemPropertyVariables>
